# git-big-picture

./: .coveragerc  .cramrc  .flake8  .gitignore  .pre-commit-config.yaml  .style.yapf  .travis.yml  MANIFEST.in  README  README.md  README.rst  git-big-picture  git-big-picture.1  git_big_picture.py  pyproject.toml  ruff.toml  run-tests-with-coverage.sh  setup.py  sync-manpage-with-help-output.sh  sync-readme-with-help-output.sh  test-cli.sh  test.cram  test.py  test.scf  test.sh  test.t  test_requirements.txt
.github/: dependabot.yml
.github/workflows/: codespell.yml  enforce-copies-of-help-output-in-sync.yml  pre-commit-detect-outdated.yml  pre-commit-run.yml  run-tests.yml
git_big_picture/: __init__.py  __main__.py  _main.py  git_tools.py  main.py
test/: invoke.sh  test.py
